Added background color options, pretty easily extendable

--- a/RedditCrap/app/css/popup.css
+++ b/RedditCrap/app/css/popup.css
@@ -19,3 +19,16 @@ fieldset {
     margin: 10px;
     border-radius: 5px;
 }
+
+
+.radio-color{ /* HIDE RADIO */
+  visibility: hidden; /* Makes input not-clickable */
+  position: absolute; /* Remove input from document flow */
+}
+.radio-color + img{ /* IMAGE STYLES */
+  cursor:pointer;
+  border:2px solid transparent;
+}
+.radio-color:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
+  border:2px solid #000;
+}
